--- a/.github/workflows/optimization-test-cron.yml
+++ b/.github/workflows/optimization-test-cron.yml
@@ -28,7 +28,20 @@ jobs:
         run: echo "$GCP_JWT_KEY" > $GITHUB_WORKSPACE/gcp_jwt_key.json
 
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
+        run: |
+          attempt=1
+          while [ $attempt -le 3 ]; do
+            if rustup toolchain install stable; then
+              break
+            fi
+            if [ $attempt -eq 3 ]; then
+              echo "Failed to install Rust toolchain after 3 attempts"
+              exit 1
+            fi
+            sleep 10
+            attempt=$((attempt + 1))
+          done
+        shell: bash
 
       - name: Cache Rust dependencies
         uses: Swatinem/rust-cache@9d47c6ad4b02e050fd481d890b2ea34778fd09d6
