--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -121,7 +121,7 @@ jobs:
               echo "Failed to install pnpm after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -164,7 +164,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -206,7 +206,7 @@ jobs:
               echo "Failed to install Rust 1.86.0 after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -230,7 +230,7 @@ jobs:
               echo "Failed to install pnpm after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -439,7 +439,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -601,7 +601,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
