--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -96,7 +96,7 @@ jobs:
               echo "Failed to update Rust after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -115,7 +115,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -146,7 +146,7 @@ jobs:
               echo "Failed to install pnpm after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
