--- a/.github/workflows/optimization-test-cron.yml
+++ b/.github/workflows/optimization-test-cron.yml
@@ -38,7 +38,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
