--- a/.github/workflows/python-client-build.yml
+++ b/.github/workflows/python-client-build.yml
@@ -37,7 +37,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -84,7 +84,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -133,7 +133,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -186,7 +186,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
