--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -31,7 +31,7 @@ jobs:
               echo "Failed to install Rust toolchain after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
@@ -52,7 +52,7 @@ jobs:
               echo "Failed to install pnpm after 3 attempts"
               exit 1
             fi
-            sleep 10
+            sleep $((10 * attempt))
             attempt=$((attempt + 1))
           done
         shell: bash
