--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -2,55 +2,17 @@ steps:
   - label: "Build Gateway Container"
     command: bash ./ci/buildkite/build-gateway-container.sh
     key: "build-gateway-container"
-    artifact_paths:
-      - gateway-container.tar
-
-  - label: "Build UI Container"
-    command: bash ./ci/buildkite/build-ui-container.sh
-    key: "build-ui-container"
-    artifact_paths:
-      - ui-container.tar
 
   - label: "Build Mock Inference Provider Container"
     command: bash ./ci/buildkite/build-mock-inference-provider-container.sh
     key: "build-mock-inference-provider-container"
-    artifact_paths:
-      - mock-inference-provider-container.tar
 
-  - label: "Download S3 Fixtures"
-    command: bash ./ci/buildkite/download-fixtures.sh
-    key: "download-fixtures"
-    artifact_paths:
-      - fixtures.tar.gz
-
-  - label: ":rust: Rust Unit Tests"
-    command: bash ./ci/buildkite/rust-unit-tests.sh
-    plugins:
-      - docker:
-          image: "rust"
-          mount-buildkite-agent: true
+  - label: "Build Node Unit Tests Container"
+    command: bash ./ci/buildkite/build-node-unit-tests-container.sh
+    key: "build-node-unit-tests-container"
 
   - label: ":node: Node.js Tests"
     command: bash ./ci/buildkite/node-unit-tests.sh
-    depends_on: "build-gateway-container"
-
-  - label: "UI E2E Tests (without LLM credentials)"
-    command: bash ./ci/buildkite/ui-e2e-tests.sh
     depends_on:
-      - "build-ui-container"
       - "build-gateway-container"
-      - "build-mock-inference-provider-container"
-
-  - label: "ClickHouse Tests (version {{matrix.clickhouse_version}})"
-    command: bash ./ci/buildkite/clickhouse-tests.sh
-    matrix:
-      setup:
-        clickhouse_version:
-          - "24.12-alpine"
-          - "latest-alpine"
-    env:
-      TENSORZERO_CLICKHOUSE_VERSION: "{{matrix.clickhouse_version}}"
-    depends_on:
-      - "download-fixtures"
-      - "build-gateway-container"
-      - "build-mock-inference-provider-container"
+      - "build-node-unit-tests-container"
