--- a/.github/workflows/buildkite-test-suite.yml
+++ b/.github/workflows/buildkite-test-suite.yml
@@ -2,11 +2,10 @@ name: Buildkite Test Suite
 run-name: "Buildkite Test Suite: ${{ github.event.pull_request.title || github.ref }}"
 
 on:
-  # Temporarily disabled
   workflow_dispatch:
 
-  # pull_request:
-  #   branches: ["main"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   unit-tests:
