--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -9,6 +9,9 @@ steps:
 
   - label: ":node: Node.js Tests"
     plugins:
+      - docker-login#v3.0.0:
+          username: $DOCKER_HUB_USERNAME
+          password-env: DOCKER_HUB_ACCESS_TOKEN
       - docker-compose#v5.2.0:
           run: node-unit-tests
           config: ui/fixtures/docker-compose.unit.yml
