--- a/ui/fixtures/docker-compose.unit.yml
+++ b/ui/fixtures/docker-compose.unit.yml
@@ -82,7 +82,7 @@ services:
       start_period: 300s # Give the script time to start
 
   node-unit-tests:
-    image: tensorzero/node-unit-tests:${TENSORZERO_UI_TESTS_TAG:-latest}
+    image: tensorzero/node-unit-tests:${TENSORZERO_NODE_UNIT_TESTS_TAG:-latest}
     build:
       context: ../.. # Same context as gateway since you need access to the whole monorepo
       dockerfile: ui/fixtures/Dockerfile.unit # Or wherever you put the test Dockerfile
