--- a/ci/buildkite/pr-tests.yml
+++ b/ci/buildkite/pr-tests.yml
@@ -27,6 +27,7 @@ steps:
       - docker:
           image: "rust"
           mount-buildkite-agent: true
+          propagate-environment: true
 
   - label: ":node: Node.js Tests"
     command: ./ci/buildkite/node-unit-tests.sh
