--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -516,7 +516,7 @@ jobs:
       - name: Launch the gateway for E2E tests (configured for replication)
         if: matrix.replicated == true
         run: |
-          cargo run-e2e --run-migrations-only &&
+          cargo run-e2e --run-clickhouse-migrations &&
           cargo run-e2e > e2e_logs.txt 2>&1 &
             count=0
             max_attempts=40
