--- a/.github/workflows/merge-queue.yml
+++ b/.github/workflows/merge-queue.yml
@@ -211,7 +211,7 @@ jobs:
       - name: Run migrations
         # we build the migrations in sqlx offline mode since the database migrations haven't been run yet
         # then the migrations can run and we can use the database
-        run: SQLX_OFFLINE=true cargo run-e2e --run-migrations-only
+        run: SQLX_OFFLINE=true cargo run-e2e --run-clickhouse-migrations
 
       - name: Launch the gateway for E2E tests
         run: |
