--- a/.github/workflows/slack-notifications.yml
+++ b/.github/workflows/slack-notifications.yml
@@ -122,7 +122,8 @@ jobs:
             }
 
       - name: Send Slack notification for pull request review
-        if: steps.check-skip.outputs.should_skip == 'false' && github.event_name == 'pull_request_review'
+        # TODO - figure out how to make this work on PRs from forks. Currently, we skip it, since we don't have secrets available.
+        if: steps.check-skip.outputs.should_skip == 'false' && github.event_name == 'pull_request_review' && !(github.event.pull_request.head.repo.full_name != github.repository || github.actor == 'dependabot[bot]')
         uses: slackapi/slack-github-action@v2.1.1
         with:
           method: chat.postMessage
