--- a/clippy.toml
+++ b/clippy.toml
@@ -5,3 +5,6 @@ doc-valid-idents = ["TensorZero", "ClickHouse", ".."]
 disallowed-types = [
     { path = "backon::Retryable", reason = "Use the retry functionality in tensorzero-core/src/utils/retries.rs instead" },
 ]
+disallowed-methods = [
+    { path = "tracing_subscriber::layer::Layer::with_filter", reason = "Call `apply_filter_fixing_tracing_bug` instead" },
+]
